Updating Code, finishing soon

--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "pdf = PDF()\n",
@@ -50,9 +50,21 @@
     "\n",
     "pdf.set_font('Arial',size=title_size)\n",
     "pdf.cell(w=0, h=10, txt='Scatterplots', border=0, ln=1)\n",
-    "path = \"export/scatter/\"\n",
-    "image_paths = [f\"{path}1) BIP pro Kopf.png\", f\"{path}2) Sozialhilfe.png\", f\"{path}3) Gesunde Lebenserwartung.png\"]\n",
-    "#pdf.add_images_in_row(image_paths, 100, 100)\n",
+    "\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tBIP pro Kopf vs. Glücklichkeitswert', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tSozialhilfe vs. Glücklichkeitswert', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tGesunde Lebenserwartung vs. Glücklichkeitswert', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tEntscheidungsfreiheit vs. Glücklichkeitswert', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tGrosszügigkeit vs. Glücklichkeitswert', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tWahrnehmungen von Korruption vs. Glücklichkeitswert', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=title_size)\n",
+    "\n",
     "\n",
     "pdf.cell(w=0, h=10, txt='Korrelationsmatrix', border=0, ln=1)\n",
     "\n",
@@ -68,9 +80,15 @@
     "pdf.cell(w=0, h=10, txt='Bubbleplots', border=0, ln=1)\n",
     "pdf.set_font('Arial',size=subtitle_size)\n",
     "pdf.cell(w=0, h=10, txt='\\tGlücklichkeitswerte, BIP pro Kopf und Lebenserwartung.  Grösse ist Grosszügigkeit.', border=0, ln=1)\n",
-    "pdf.cell(w=0, h=10, txt='\\tBIP pro Kopf und Lebenserwartungen nach Jahren. Grösse ist Glücklichkeitswert.', border=0, ln=1)\n",
+    "pdf.cell(w=0, h=10, txt='\\tEntscheidungsfreiheit und Rang nach Jahren. Grösse ist Glücklichkeitswert.', border=0, ln=1)\n",
     "pdf.set_font('Arial',size=title_size)\n",
-    "pdf.cell(w=0, h=10, txt='Interactive plots', border=0, ln=1)"
+    "pdf.cell(w=0, h=10, txt='Interactive plots', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tLandkartenplots.', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=title_size)\n",
+    "pdf.cell(w=0, h=10, txt='Animierter plot', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tGlücklichkeit nach BIP pro Kopf, Grosszügigkeit und Lebenserwartung.', border=0, ln=1)"
    ],
    "metadata": {
     "collapsed": false
@@ -78,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "''"
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
