Little update to pdf notebook.  Hope i'm finished now.

--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "pdf = PDF()\n",
@@ -69,9 +69,11 @@
     "pdf.cell(w=0, h=10, txt='Korrelationsmatrix', border=0, ln=1)\n",
     "\n",
     "pdf.cell(w=0, h=10, txt='Boxplot', border=0, ln=1)\n",
+    "pdf.set_font('Arial',size=subtitle_size)\n",
+    "pdf.cell(w=0, h=10, txt='\\tBoxplot der Glücklichkeitswerte nach Jahr.', border=0, ln=1)\n",
     "\n",
+    "pdf.set_font('Arial',size=title_size)\n",
     "pdf.cell(w=0, h=10, txt='Kombiplot', border=0, ln=1)\n",
-    "\n",
     "pdf.set_font('Arial',size=subtitle_size)\n",
     "pdf.cell(w=0, h=10, txt='\\tBIP pro Kopf und Glücklichkeitswert nach Jahr.  Grösse ist Lebenserwartung.', border=0, ln=1)\n",
     "pdf.set_font('Arial',size=title_size)\n",
@@ -96,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "''"
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
