Little updates.  Completed Handout.

--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -36,13 +36,14 @@
     "        self.cell(w=0, h=8, txt='Projekt Datenvisualisierung', border=0, align='C', ln=1)\n",
     "        self.set_font('Arial', style=\"B\", size=subtitle_size)\n",
     "        self.cell(w=0, h=8, txt='Name: Stefan Ronacher', border=0, align='L', ln=1)\n",
+    "        self.cell(w=0, h=8, txt='Kurs: Februar 2023', border=0, align='L', ln=1)\n",
     "        self.image('datacraft_logo.png')\n",
     "        self.cell(w=0, h=10, ln=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "pdf = PDF()\n",
@@ -98,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "''"
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
