Little update in pdf notebook.

--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "pdf = PDF()\n",
@@ -99,19 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
       "text/plain": "''"
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pdf.output('Handout.pdf')"
+    "pdf.output('Handout_Projekt_DV_Stefan_Ron.pdf')"
    ],
    "metadata": {
     "collapsed": false
